# sc2-proto-rs

./: .editorconfig  .rustfmt.toml  Cargo.toml  README.md  build.rs
src/: common.rs  data.rs  debug.rs  error.rs  lib.rs  query.rs  raw.rs  sc2api.rs  score.rs  spatial.rs  ui.rs
