[package]
name = "sc2-proto"
version = "0.4.0"
description = "protocol buffers for the StarCraft II Client API"
authors = [
	"Andrew J Westlake <kelixes@gmail.com>",
	"Armageddon <lunyx1337@gmail.com>",
	"Hannes Karppila <hannes.karppila@gmail.com>",
]
license = "MIT"
documentation = "https://docs.rs/sc2-proto"
homepage = "https://github.com/UltraMachine/sc2-proto-rs"
repository = "https://github.com/UltraMachine/sc2-proto-rs"
edition = "2018"
build = "build.rs"

[build-dependencies]
protoc-rust = { version = "^2.17.0", optional = true }

[dependencies]
protobuf = "^2.17.0"
