[package]
name = "sc2-proto"
version = "0.4.0"
description = "protocol buffers for the StarCraft II Client API"
authors = [
	"Andrew J Westlake <kelixes@gmail.com>",
	"Armageddon <lunyx1337@gmail.com>",
	"Hannes Karppila <hannes.karppila@gmail.com>",
]
license = "MIT"
documentation = "https://docs.rs/sc2-proto"
homepage = "https://github.com/UltraMachine/sc2-proto-rs"
repository = "https://github.com/UltraMachine/sc2-proto-rs"
edition = "2018"
build = "build.rs"

[features]
generate = ["protobuf-codegen", "protoc-bin-vendored"]
default = []

[build-dependencies]
protobuf-codegen = { version= "^3.1.0", optional = true }
protoc-bin-vendored = {version ="3.0.0", optional = true }

[dependencies]
protobuf = "^3.1.0"
